kustomize/overlays/jupyter-lab/agent-morpheus-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent-morpheus-rh
  labels:
    app: agent-morpheus
    component: agent-morpheus-rh
spec:
  template:
    spec:
      containers:
        - name: agent-morpheus
          image: quay.io/ecosystem-appeng/agent-morpheus-rh:dev
          args: ["jupyter-lab", "--no-browser", "--allow-root", "--ip='0.0.0.0'", "--port=8000", "--NotebookApp.token=''", "--NotebookApp.password=''"]
          ports:
            - name: jupyter
              protocol: TCP
              containerPort: 8000
