kustomize/overlays/jupyter-lab/agent-morpheus-jupyter-network.yaml
apiVersion: v1
kind: Service
metadata:
  name: agent-morpheus-jupyter
  labels:
    app: agent-morpheus
    component: agent-morpheus-rh
spec:
  ports:
  - name: jupyter
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: agent-morpheus
    component: agent-morpheus-rh
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: agent-morpheus-jupyter
  annotations:
    haproxy.router.openshift.io/timeout: 5m
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  port:
    targetPort: 8000
  to:
    kind: Service
    name: agent-morpheus-jupyter
